# hdf5-quickstart

./: README.md
cnpy-workaround/: CMakeLists.txt  cnpy-mruiz.cpp  example1
examples/: .gitignore  Makefile  README.md  h5_create_dataset.c
nimbus-data/: Makefile  explore.c  explore.py  modelCNN.CNNMC250.4classes.model0.run0.coeftxt.h5  model_chkpoints.h5  modelweb.CNNMC250.4classes.model0.run0.h5
